added method  to check event conflicts|implement method to check valid token and renewal of access token|defined check-conflicts in swagger|installed morgan|modified app.js limiting size of json and file passed in app.use(express.)
