# src/routes/eventRoutes.js
@@ -5,12 +5,12 @@ const eventController = require('../controllers/eventController');
 
 //router.use(auth);
 
-router.post('/', eventController.createEvent);
-router.get('/', eventController.getEvents);
+router.post('/', auth, eventController.createEvent);
+router.get('/', auth, eventController.getEvents);
 //router.get('/:event_id', eventController.getEventById);
-router.get('/check-conflicts', eventController.checkConflicts);
-router.patch('/:event_id', eventController.updateEvent);
-router.delete('/:event_id', eventController.deleteEvent);
-router.post('/sync-google', eventController.syncAllEvents);
+router.get('/check-conflicts', auth, eventController.checkConflicts);
+router.patch('/:event_id', auth, eventController.updateEvent);
+router.delete('/:event_id', auth, eventController.deleteEvent);
+router.post('/sync-google', auth, eventController.syncAllEvents);
 
 module.exports = router;
